--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/mochi.html">Mochi</a>
+    <ul>
+      <li><a href="recipes/mochi.html">Mochi</a></li>
+      <li><a href="recipes/korean-kimchi.html">Korean Kimchi</a></li>
+      <li><a href="recipes/ramen.html">Ramen</a></li>
+    </ul>
   </body>
 </html>
