Added CSS to the pages in question

--- a/recipes/mochi.html
+++ b/recipes/mochi.html
@@ -5,10 +5,13 @@
 <head>
   <meta charset="uft-8">
   <title>Mochi</title>
+  <link rel="stylesheet" href="styles.css">
 
   <body>
     <h1>Mochi</h1>
-    <img src="https://www.allrecipes.com/thmb/R5cy23AxrgxUAAFdMbPEq3gI7Q4=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/193307-easy-mochi-DDMFS-4x3-d68e2c5a886b42ce9c91f83a6abd9298.jpg" alt="A delicious bean mochi" width="500" height="500">
+    <img src="https://www.allrecipes.com/thmb/R5cy23AxrgxUAAFdMbPEq3gI7Q4=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/193307-easy-mochi-DDMFS-4x3-d68e2c5a886b42ce9c91f83a6abd9298.jpg" alt="A delicious bean mochi" id="mochi1">
+    <img src="https://cdn.shopify.com/s/files/1/0567/2298/1022/t/13/assets/dalle-2023-12-28-12.44.35---create-a-hyper-realistic-image-of-whole-strawberry-mochi-ice-cream-pieces.-each-mochi-should-have-a-smooth-matte-soft-pink-exterior-capturing-the-au-1703796291205.png?v=1703796296" alt="another delicious mochi (Strawberry mochi)" id="mochi2">
+    <img src="https://cdn.apartmenttherapy.info/image/upload/f_jpg,q_auto:eco,c_fill,g_auto,w_1500,ar_16:9/k%2FPhoto%2FRecipes%2F2023-07-mochi%2FMochi-Ice-Cream_17700jpg" alt="Mochi Ice cream" id="mochi3">
 
     <h2>Description</h2>
 
@@ -17,8 +20,9 @@
     <p>It can be seen as <strong>Plain Mochi</strong> - Simple and unflavored, <strong>Daifuku</strong> - Filled with sweetened red bean paste, <strong>Mochi Ice Cream</strong> - Filled with ice cream, etc. Today, it's going to be Daifuku, a mochi filled with red bean paste.</p>
 
     <h2>Ingredients</h2>
-    
-    <ul>
+  
+  <div class="list_div">
+    <ul class="list">
       <li>1 cup sweetened red bean paste</li>
       <li>1 cup glutinous rice flour</li>
       <li>1 teaspoon green tea powder; matcha</li>
@@ -26,10 +30,12 @@
       <li>1/4 cup white sugar</li>
       <li>1/2 cup cornstarch, for rolling out the dough</li>
     </ul>
+  </div>
 
     <h2>Steps</h2>
-
-    <ol>
+  
+  <div class="list_div">
+    <ol class="list">
       <li>Firstly, gather all the ingredients</li>
       <li>Wrap red beam paste in aluminum foil and place in the freezer until solid, wait about 1 hour</li>
       <li>Mix glutinous rice flour and green tea powder thoroughly in a microwave-safe-bowl</li>
@@ -42,10 +48,12 @@
       <li>Repeat Step 6 to make remaining mochi.</li>
       <li>Enjoy!</li>
     </ol>
+  </div>
 
+  <div class="link">
     <h3>Source:</h3>
     <a href="https://www.allrecipes.com/recipe/193307/easy-mochi/" target="_blank" rel="noopener noreferrer">allrecipes</a>
-
+  </div>
 
   </body>
 
